Fixed an issue, where quiz elements wouldn't align after moving moving some css to global styles.

--- a/src/app/pages/quiz/quiz.component.css
+++ b/src/app/pages/quiz/quiz.component.css
@@ -1,19 +1,8 @@
-/* * {
-    margin: 0;
-    padding: 0;
-}
-
-.constant-Background {
-    width: 100vw;
-    height: 100vh;
-    margin: -8px;
-    padding: 0px;
-    font-size: 45px;
+.quiz-page {
     background-color: #32292F;
     color: #99E1E9;
-    font-family: 'Pacifico', cursive;
     text-align: center;
-} */
+}
 
 #buttons {
     padding: 0;
